--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,18 @@
   padding: 0px;
 }
 
+/* custom scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+::-webkit-scrollbar-thumb{
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+}
+
+
+
 *,
 *:after,
 *:before {
